chore: add jvm option to docker arg